--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="creator" content="Tiana Annaick"/>
+    <meta name="robots" content="index">
+    <meta name="description" content="A personal e-commerce project with call to FakeStore API">
+    <meta name="og:image" content="/desktop-pic.png">
+    <meta name="og:title" content="Tiana Annaick - E-commerce">
+    <meta name="og:description" content="A personal project for a fully functional E-commerce business made with React and Fakestore API">
     <title>A'nnaick</title>
   </head>
   <body>
